# auto-battlebot

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CONFIG_SYSTEM.md  README.md  activate_python.sh  build_desktop.sh  build_jetson.sh  clean_build.sh  pseudo_code.md  pyproject.toml  run_tests.sh  setup_python.sh  valgrind.supp
.cursor/plans/: libtorch_to_onnx_runtime_5ddfc0f0.plan.md
cmake/: FindTensorRT.cmake
config/: classes.toml  desktop.toml  main.toml  playback.toml  robots.toml  simulation.toml
config/desktop/: classes.toml
config/experiment1/: classes.toml
config/experiment1_gt/: classes.toml
config/experiment4_hyst_off/: classes.toml
config/experiment4_hyst_on/: classes.toml
config/experiment4b_kp1_kd0/: classes.toml  robots.toml
docker/: .gitignore  docker-compose.ros-connector.yml  docker-compose.roscore.yml  launch_ros_connector.sh  ros-connector.Dockerfile
docs/: SIMULATION_SYSTEM_ENGINEERING_PLAN.md  generate_diagrams.sh  jetson_setup.md  pseudo_code.md
examples/: channel_example.cpp
firmware/: parse_blheli_log.py
include/: colorize_labels.hpp  config.hpp  config_cast.hpp  config_factory.hpp  consumer.h  data_structures.hpp  directories.hpp  enum_to_string_lower.hpp  enums.hpp  label_utils.hpp  pipeline.h  producer.h  quittable.hpp  robot_descriptions_cache.hpp  runner.hpp  runner_config.hpp  thread_pool.h  thread_safe_queue.h  time_utils.hpp  transform_utils.hpp
install/: base_packages.txt  build_cpp_project.sh  check_jetson_orin_nano.sh  check_os_ubuntu.sh  check_os_ubuntu_22.sh  check_os_ubuntu_24.sh  desktop_packages.txt  install_docker_roscore.sh  install_docker_ubuntu.sh  install_ds3231_rtc.sh  install_floor_sam3_environment.sh  install_foxglove_sdk.sh  install_jetson_clocks.sh  install_jetson_stability.sh  install_libtorch_jetson.sh  install_libtorch_ubuntu.sh  install_mcap_cli.sh  install_opencv_jetson.sh  install_packages.sh  install_platformio.sh  install_pstore_ramoops.sh  install_python_environment.sh  install_pytorch_jetson.sh  install_ros_connector.sh  install_sam3.sh  install_taplo.sh  install_tensorrt_runtime_ubuntu.sh  install_udev_rules.sh  jetson_packages.txt  tensorrt_ubuntu_packages.txt  ubuntu_22_packages.txt  ubuntu_24_packages.txt
playground/: DIAGNOSTICS_README.md  analyze_failure_event.py  analyze_nav_diagnostics.py  analyze_pstore_ramoops.py  analyze_syslog_reboot_failure.py  diagnostics_logger.py  diagnostics_module_logger.py  diagnostics_to_dict.py  dict_to_diagnostics.py  example_diagnostics_usage.cpp  example_function_timer.cpp  genesis_diff_drive.py  initialize_diagnostics.py  roboflow_coco_to_yolo_keypoints.py  simplify_gltf.py  test_ds3231_rtc.py  test_mr_stabs.py  timers.txt
scripts/: SYNC_MODELS.md  activate_python.sh  analyze_nav_diagnostics.py  apply_formatting  battery_ocv_table.py  build.sh  build_and_diagnose.sh  build_and_install.sh  build_and_run.sh  build_and_test.sh  build_battery_ocv_table.py  build_debug.sh  build_jetson.sh  build_ubuntu_22.sh  build_ubuntu_24.sh  clean_build.sh  combine_mcap_svo.py  deploy_to_jetson.sh  diag_collect_jetson.py  install_jetson.sh  install_ubuntu_22.sh  install_ubuntu_24.sh  lint  mcap_auto_percentage.py  mcap_rosout.py  mcap_topic_sizes.py  plot_battery_ocv_capture.py  run.sh  run_debug.sh  run_diagnostics.sh  run_ros_connector.sh  run_roscore.sh  run_simulation.sh  setup_python.sh  setup_simulation.sh  sync_models.py
service/: auto_battlebot.service  build_and_install_service.sh  build_and_restart_service.sh  build_and_run.sh  disable_kiosk.sh  enable_kiosk.sh  install_paths.sh  run.sh  run_with_kiosk.sh
simulation/: .gitignore  README.md  behaviors.py  camera_utils.py  protocol.py  requirements.txt  runner.py  scene.py  sim_config.toml  sim_config_experiment1.toml  sim_server.py
simulation/native_plugin/: CMakeLists.txt  README.md  build_and_install_unity_plugin.sh
simulation/native_plugin/include/: cuda_interop.h
simulation/native_plugin/src/: cuda_interop.cu  gpu_memory_share.cpp
src/: config.cpp  directories.cpp  main.cpp  robot_descriptions_cache.cpp  runner.cpp  runner_config.cpp  transform_utils.cpp
stickers/: Stickers - MBMK3 Bottom Sticker.dxf  Stickers - MBMK3 Bottom Sticker.xcf  Stickers - MBMK3 Top Sticker.dxf  Stickers - MBMK3 Top Sticker.xcf  combine_sticker_pdf.py  convert_cut_pdf_to_vector.py
tests/: test_config.cpp  test_floor_mask_detector.cpp  test_front_back_keypoint_converter.cpp  test_header.cpp  test_keypoint.cpp  test_pose.cpp  test_robot.cpp  test_robot_descriptions_cache.cpp  test_robot_front_back_simple_filter.cpp  test_robot_keypoint_tracker.cpp  test_robot_mask_detector.cpp  test_transform.cpp
training/: svo_export.py  video_to_images.py
training/floor/: .gitignore  README.md  common.py  export_dataset.py  propagate_masks.py  pyproject.toml  quality_filter.py  run_pipeline.py  sam3_adapter.py  sam3_floor_segment.py  scrape_brettzone.py  test_sam3.py  transcode_videos.py
training/floor/config/: pipeline.toml  prompts.toml
training/floor/data/metadata/: scrape_state.json
training/floor/data/smoke/: smoke_pipeline.toml
training/floor/data/smoke/exports/yolo_seg/: data.yaml
training/floor/data/smoke/metadata/: export_manifest.jsonl  export_summary.json  propagation_manifest.jsonl  quality_eval_manifest.jsonl  quality_pass_manifest.jsonl  quality_summary.json
training/floor/tests/: smoke_run.py  test_export_polygon.py  test_quality_metrics.py  test_scrape_parsing.py
training/synthetic/: .gitignore  Dockerfile  README.md  benchmark_reference_models.py  coco_to_yolo.py  config.toml  download_ambientcg.py  download_objaverse.py  download_polyhaven_hdris.py  generate_reference_models.py  generate_sam3d_models.py  prepare_robot_model.py  pyproject.toml  render_scenes.py  setup.sh  simplify_gltf.py
training/synthetic/docker/: build_container.sh  entrypoint.sh  run_synthetic.sh
training/synthetic/scripts/: sf3d_backend_wrapper.py
training/trt_onnx_builder/: CMakeLists.txt  README.md
training/trt_onnx_builder/cmake/: FindTensorRT.cmake
training/trt_onnx_builder/src/: trt_onnx_builder.cpp
(+525 files in other folders)
