[project]
name = "auto-battlebot"
version = "0.1.0"
description = "Auto Battlebot Project"
requires-python = ">=3.10"
dependencies = [
    "ultralytics",
    "numpy>=2.0.0,<3.0.0",
    "matplotlib",
    "scipy",
    "minigencpp @ git+https://github.com/Woz4tetra/minigencpp.git",
    "tqdm",
    "livelossplot",
    "torchmetrics",
    "opencv-python>=4.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
    "onnxscript",
    "pycuda",
    "natsort",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    # x86 only: often unavailable or different on Jetson (aarch64)
    "torch>=2.0.0; platform_machine == \"x86_64\"",
    "tensorrt==10.14.1.48.post1; platform_machine == \"x86_64\"",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []
