[project]
name = "auto-battlebot-floor-pipeline"
version = "0.1.0"
description = "Isolated environment for floor segmentation dataset generation"
requires-python = ">=3.10"
dependencies = [
    # Keep SAM3 stack isolated from the top-level project environment.
    "numpy>=1.26,<2.4",
    "opencv-python>=4.9.0",
    "pyyaml>=6.0",
    "tomli; python_version < '3.11'",
    "aiofiles>=23.2.1",
    "av>=12.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "requests>=2.32.3",
    "scikit-image>=0.24.0",
    "shapely>=2.0.6",
    "tenacity>=9.0.0",
    "xxhash>=3.5.0",
    "yt-dlp>=2025.3.31",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
