[project]
name = "battlebot-synthetic"
version = "0.1.0"
description = "Synthetic data generation pipeline for YOLO keypoint training"
requires-python = ">=3.10"
dependencies = [
    "blenderproc",
    "numpy>=1.26,<2",
    "opencv-python>=4.5.0",
    "objaverse",
    "tomli; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []
